Wrap around now looks proper with how it was talked about in class. the image of the ship is now centered on the x,y position of the ship instead of off the corner. maximum velocity bug (thrusters locked out when reached maximum allowed speed) repaired so you can slow down after hitting the max. section added to style sheet to make canvas easier to see on smaller screens and make the size more manageable moving forward.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,9 @@ body {
 a {
   color: #00B7FF;
 }
+
+#canvas-main
+{
+    height: 600px;
+    width: 900px;
+}
